[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Interface.gd" type="Script" id=1]
[ext_resource path="res://assets/xolonium-regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0.541176, 1 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0.376471, 1 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0.752941, 1 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 80
font_data = ExtResource( 2 )

[node name="Interface" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 500.0
margin_bottom = 850.0
color = Color( 1, 1, 1, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_right = 480.0
margin_bottom = 868.0
rect_scale = Vector2( 1.04267, 0.979604 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
visible = false
margin_right = 500.0
margin_bottom = 612.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "
Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 185.0
margin_top = 640.0
margin_right = 313.0
margin_bottom = 704.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 185.0
margin_top = 520.0
margin_right = 313.0
margin_bottom = 584.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
margin_right = 500.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TETRIS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
